updated background colors and link color

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-    color: rgb(255, 0, 0)
+    color: rgb(0, 110, 255)
 }
 
 /* a:visited {
@@ -68,6 +68,7 @@ section > * {
     padding-inline: 20px;
     margin-inline: 10px;
     margin-block: 10px;
+    cursor: pointer;
 }
 
 #aboutme p {
@@ -80,7 +81,7 @@ section > h2.section-header {
 }
 
 #curiosity-and-learning {
-    background-image: linear-gradient(45deg, #657aff, #92effd);
+    background-image: linear-gradient(45deg, #77d8ff, rgb(185, 247, 247));
 }
 
 .school {
@@ -102,7 +103,7 @@ section > h2.section-header {
     list-style: none;
     text-align: center;
     padding-inline: 10px;
-    margin-block-end: 24px;
+    margin-block-end: 40px;
 }
 
 .course-highlights ul {
@@ -146,6 +147,7 @@ section > h2.section-header {
     border-radius: 1px;
     padding-block: 16px;
     margin-block: 0px;
+    cursor: pointer;
 }
 
 .course-highlights > li > ul > li > p strong {
@@ -186,7 +188,7 @@ section > h2.section-header {
 }
 
 #storytelling {
-    background-image: linear-gradient(45deg, #c33764, #1d2671);
+    background-image: linear-gradient(45deg, #802845, #470b5f);
     color: rgb(236, 236, 236);
 }
 
@@ -195,11 +197,27 @@ section > h2.section-header {
 }
 
 #contactme {
-    margin: 20px;
+    margin: 16px;
+    padding-block: 28px;
+    padding-inline: 0px;
     color: white;
+    text-align: center;
+}
+
+#contactme h3 {
+    margin-bottom: 40px;
 }
 
 #contactme address {
     margin-inline-start: 8px;
+    font-style: normal;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
+
+#contactme address p {
+    margin: 2px;
+    margin-inline-start: 12px;
 }
   
